--- a/server/Views/List.html
+++ b/server/Views/List.html
@@ -6,7 +6,7 @@
     <script src="../angular/angular-route.js"></script>
 
     <meta charset="UTF-8">
-    <title>Messages list</title>
+    <title>Messages list:</title>
 </head>
 
 <body ng-controller="ListCtrl">
