Start working on the angular views...

--- a/server/Views/List.html
+++ b/server/Views/List.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head ng-app="MessageApp">
+<head ng-app>
 
     <script src="../angular/angular.js"></script>
     <script src="../angular/angular-route.js"></script>
