--- a/server/Views/List.html
+++ b/server/Views/List.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="MessagesApp.List">
+<html lang="en" ng-app="MessagesApp">
 <head>
     <script src="/javascripts/angular/angular.js"></script>
     <script src="/javascripts/angular/angular-route.js"></script>
@@ -7,8 +7,9 @@
     <script type="text/javascript" src="javascripts/display.js"></script>
     <script type="text/javascript" src="/javascripts/jquery.js"></script>
     <script type="text/javascript" src="/javascripts/socket.io-client/socket.io.js"></script>
-    <script type="text/javascript" src="/javascripts/jquery.tmpl.js"></script>
     <script type="text/javascript" src="/javascripts/App.js"></script>
+    <script type="text/javascript" src="/javascripts/Edit.js"></script>
+    <script type="text/javascript" src="/javascripts/Services.js"></script>
     <script type="text/javascript" src="/javascripts/List.js"></script>
 
     <meta charset="UTF-8">
