--- a/server/Views/Display.html
+++ b/server/Views/Display.html
@@ -1,8 +1,9 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" ng-app="MessagesApp">
+<html lang="en" ng-app="MessagesApp">
 <head>
-    <title>Display</title>
+
     <link rel="stylesheet" type="text/css" href="/stylesheets/Display.css" />
+
     <script type="text/javascript" src="/javascripts/angular/angular.js"></script>
     <script type="text/javascript" src="/javascripts/angular/angular-route.js"></script>
     <script type="text/javascript" src="/javascripts/display.js"></script>
@@ -12,7 +13,11 @@
     <script type="text/javascript" src="/javascripts/Edit.js"></script>
     <script type="text/javascript" src="/javascripts/Services.js"></script>
     <script type="text/javascript" src="/javascripts/List.js"></script>
-
+    <script type="text/javascript" src="/javascripts/Create.js"></script>
+    <script type="text/javascript" src="/javascripts/Item.js"></script>
+    
+    <meta charset="UTF-8" />
+    <title>Display</title>
 
     <script type="text/javascript">
 
