--- a/server/Views/Edit.html
+++ b/server/Views/Edit.html
@@ -111,8 +111,8 @@
             </div>
 
             <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                    <button type="submit" class="btn btn-default">Submit</button>
+                <div class="btn btn-large btn-block">
+                    <button type="submit" class="btn btn-default">Save</button>
                 </div>
             </div>
         </form>
