--- a/server/Views/Edit.html
+++ b/server/Views/Edit.html
@@ -34,7 +34,9 @@
             <div class="form-group">
                 <label class="control-label col-sm-2">Template</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="template" value={{Message.template}}>
+                    <select multiple class="form-control" id="template" >
+                        <option ng-repeat="template in Templates" ng-value="template.path">{{template.path}}</option>
+                    </select>
                 </div>
             </div>
             <div class="form-group">
@@ -44,22 +46,11 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="control-label col-sm-2">Screen</label>
+                <label class="control-label col-sm-2">Screens</label>
                 <div class="col-sm-10">
-                    <select multiple class="form-control" id="screen">
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                        <option value="6">6</option>
+                    <select multiple class="form-control" id="screen" >
+                        <option ng-repeat="screen in Screens" ng-value="screen.number">{{screen.number + " : " + screen.location}}</option>
                     </select>
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="control-label col-sm-2">Screen</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="screen" value={{Message.screen}}>
                 </div>
             </div>
 
