--- a/server/Views/Edit.html
+++ b/server/Views/Edit.html
@@ -34,24 +34,24 @@
             <div class="form-group">
                 <label class="control-label col-sm-2">Template</label>
                 <div class="col-sm-10">
-                    <select multiple class="form-control" id="template" >
-                        <option ng-repeat="template in Templates" ng-value="template.path">{{template.path}}</option>
+                    <select class="form-control" id="template" ng-options="template.path for template in Templates track by template.path" ng-model="Message.template">
+                        <option value="">-- choose template --</option>
                     </select>
                 </div>
             </div>
             <div class="form-group">
-                <label class="control-label col-sm-2">Dispy Time (sec)</label>
+                <label class="control-label col-sm-2">Display Time (sec)</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" id="dispTimeSec" value={{Message.dispTimeSec}}>
                 </div>
             </div>
             <div class="form-group">
                 <label class="control-label col-sm-2">Screens</label>
-                <div class="col-sm-10">
-                    <select multiple class="form-control" id="screen" >
-                        <option ng-repeat="screen in Screens" ng-value="screen.number">{{screen.number + " : " + screen.location}}</option>
-                    </select>
-                </div>
+
+                <label class="checkbox-inline" ng-repeat="screen in Screens">
+                    <input class="" type="checkbox" id="screen{{$index}}" ng-model="screen.number in Message.screen"/>
+                    {{screen.location}}
+                </label>
             </div>
 
             <h3>Texts</h3>
